syntax = "proto3";

package vts.relay;

message ReqRelayCreate {
  int32 hours = 1;
  int32 participants = 2;
  int32 frameRate = 3;
  int32 frameQuality = 4;
  int32 frameSize = 5;
}

message RspPrice {
  float price = 1;
}

message RspBuyQrCode {
  string code = 1;
  string id = 2;
}

message ReqBuyStatus {
  string id = 1;
}

message RspBuyStatus {
  string status = 1;
  string ip = 2;
  string username = 3;
  string password = 4;
}

service RelayService {
  rpc QueryPrice(ReqRelayCreate) returns (RspPrice);
  rpc StartBuyWeixin(ReqRelayCreate) returns (RspBuyQrCode);
  rpc QueryStatus(ReqBuyStatus) returns (RspBuyStatus);
}